--- a/style.css
+++ b/style.css
@@ -3435,6 +3435,9 @@ body.no-scroll {
 @media (max-width: 992px) {
     /*Nav*/
     /*Banner*/
+    .banner {
+        background-position: 14%;
+    }
     .banner-image {
         display: none;
     }
@@ -4253,7 +4256,8 @@ body.no-scroll {
     .sales-mobile-list {
         display: flex;
         flex-direction: row;
-        overflow-y: scroll;
+        overflow: hidden;
+        overflow-x: scroll;
         width: 100%;
     }
     .sales-mobile-list .sales-slide {
