--- a/style.css
+++ b/style.css
@@ -41,7 +41,16 @@ body {
     position: relative;
     overflow-x: hidden !important;
 }
-
+main {
+    position: relative;
+}
+.standart-page-title {
+    line-height: 33px;
+    color: #2f2f2f;
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 48px;
+}
 .main-widjet-wrapper {
     display: flex;
     flex-direction: column;
@@ -3295,6 +3304,9 @@ body.no-scroll {
     }
 }
 @media (max-width: 1200px) {
+    .banner-breadcrumb {
+        top: 64px;
+    }
     /*Nav*/
     .navbar, .mid-nav, .bottom-nav {
         display: none !important;
@@ -3459,6 +3471,10 @@ body.no-scroll {
         margin-bottom: 16px;
     }
     /*System*/
+    .system-items-wrapper {
+        width: 100%;
+        overflow-x: scroll;
+    }
     .sys-bar5 {
         left: 48.3%;
         top: 17%;
@@ -3703,10 +3719,6 @@ body.no-scroll {
     }
     
     /*System*/
-    .system-items-wrapper {
-        width: 100%;
-        overflow-x: scroll;
-    }
     .sys-bar5 {
         left: 65.7%;
         top: 17%;
