--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -39,7 +39,7 @@
 .contact-item-text h3 {
     margin-bottom: 2px;
     font-size: 14px;
-    font-weight: 800;
+    font-weight: 700;
     color: #ff8562;
 }
 .contact-item-text p {
@@ -81,7 +81,7 @@
     width: 42%;
     font-size: 14px;
     margin-bottom: 0;
-    font-weight: 600;
+    font-weight: 500;
     padding-right: 16px;
     border-right: 1px solid #ededed;
     margin-bottom: 0;
@@ -111,10 +111,10 @@
     font-size: 24px !important;
     font-weight: 800 !important;
     text-align: center !important;
-    margin-bottom: 12px !important;
+    margin-bottom: 8px !important;
 }
 .contact__form-p {
-    line-height: 20px !important;
+    line-height: 18px !important;
     color: #2f2f2f !important;
     font-size: 14px !important;
     font-weight: 600 !important;
@@ -126,4 +126,7 @@
 }
 .conctact__form-wrapper .questions-form-alert {
     margin-top: 0;
+}
+.questions-form-wrapper {
+    height: 100%;
 }
