--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -887,10 +887,105 @@
 
 
 
+.custom-select-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 510px;
+  user-select: none;
+}
 
+/* Скрываем стандартный селект */
+.custom-select {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  cursor: pointer;
+}
 
+.custom-select-trigger {
+  cursor: pointer;
+  z-index: 2;
+  position: relative;
+  border-width: 0px;
+  border-radius: 7px;
+  background-color: #ffffff;
+  background-position: center center;
+  border-color: #ff8562;
+  border-style: solid;
+  box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.3);
+  width: 100%;
+  height: 62px;
+  display: flex;
+  align-items: center;
+  padding-left: 32px;
 
+  line-height: 25px;
+  color: #ff8562;
+  font-size: 16px;
+  font-weight: 500;
+}
 
+.custom-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border-radius: 7px;
+  z-index: 999;
+  line-height: 25px;
+  color: #ff8562;
+  font-size: 16px;
+  font-weight: 500;
+  box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.3);
+}
+
+.custom-option {
+  padding: 10px;
+  padding-left: 32px;
+  cursor: pointer;
+  border-radius: 7px;
+}
+.custom-option:last-child {
+  border-radius: 0 0 7px 7px !important;
+}
+.custom-option:hover {
+  background-color: #ff8562;
+  color: #fff;
+  border-radius: 0;
+}
+
+.custom-select-wrapper.open .custom-options {
+  display: block;
+}
+
+.custom-select-trigger::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  transform: translateY(-50%);
+  width: 25px;
+  height: 25px;
+  background-color: #ff8562;
+  border-radius: 50%;
+  background-position: 50% 53% !important;
+  background-repeat: no-repeat !important;
+  background-size: 65% !important;
+}
+
+.custom-select-wrapper.open .custom-select-trigger {
+  border-radius: 7px 7px 0 0;
+}
+.custom-select-wrapper.open .custom-options {
+  border-radius: 0 0 7px 7px;
+  box-shadow: none;
+}
 
 
 
@@ -1042,7 +1137,13 @@
 
 }
 @media (max-width: 768px) {
-
+  .calc-param-item {
+    flex-direction: column;
+    align-items: start;
+  }
+  .calc-param-title {
+    margin-bottom: 16px;
+  }
 }
 @media (max-width: 576px) {
 
